# numerical

./: .gitignore  CMakeLists.txt  LinearSystem.hpp  Matrix.h  Matrix.hpp  README.md  config.cmake.in  main.cpp
src/: matrix.hpp  numerical.cpp
